@@ -1,5 +1,10 @@
 2008-05-05  Jonh Wendell <jwendell@gnome.org>
 
+	* src/vinagre-tab.c,
+	* src/vinagre-window.c: Handle correctly clipboard. Closes #530582.
+
+2008-05-05  Jonh Wendell <jwendell@gnome.org>
+
 	* src/Makefile.am: Don't distribute vinagre-enums.[hc]. Closes #531593.
 
 2008-05-02  Jonh Wendell <jwendell@gnome.org>
